rewrite language support